@@ -73,6 +73,55 @@ i18n("Western Sahara");
 i18n("Yemen");
 i18n("Zambia");
 i18n("Zimbabwe");
+i18n("Algiers");
+i18n("Luanda");
+i18n("Porto Novo");
+i18n("Gaborone");
+i18n("Ouagadougou");
+i18n("Bujumbura");
+i18n("Yaoundé");
+i18n("Bangui");
+i18n("N'Djamena");
+i18n("Yamoussoukro");
+i18n("Kinshasa");
+i18n("Djibouti");
+i18n("Cairo");
+i18n("Malabo");
+i18n("Asmara");
+i18n("Addis Ababa");
+i18n("Libreville");
+i18n("Accra");
+i18n("Conakry");
+i18n("Bissau");
+i18n("Nairobi");
+i18n("Maseru");
+i18n("Monrovia");
+i18n("Tripoli");
+i18n("Antananarivo");
+i18n("Lilongwe");
+i18n("Bamako");
+i18n("Nouakchott");
+i18n("Rabat");
+i18n("Maputo");
+i18n("Windhoek");
+i18n("Niamey");
+i18n("Abuja");
+i18n("Brazzaville");
+i18n("Kigali");
+i18n("Dakar");
+i18n("Freetown");
+i18n("Mogadishu");
+i18n("Cape Town");
+i18n("Khartoum");
+i18n("Mbabane");
+i18n("Dodoma");
+i18n("Banjul");
+i18n("Lomé");
+i18n("Tunis");
+i18n("Kampala");
+i18n("Laayoune");
+i18n("Lusaka");
+i18n("Harare");
 i18n("Europe");
 i18n("Water");
 i18n("Coast");
@@ -179,3 +228,20 @@ i18n("Madrid");
 i18n("Murcia");
 i18n("Navarre");
 i18n("Valencian Community");
+i18n("Seville");
+i18n("Zaragoza");
+i18n("Oviedo");
+i18n("Palma de Mallorca");
+i18n("Vitoria");
+i18n("Las Palmas de Gran Canaria and Santa Cruz de Tenerife");
+i18n("Santander");
+i18n("Toledo");
+i18n("Valladolid");
+i18n("Barcelona");
+i18n("Mérida");
+i18n("Santiago de Compostela");
+i18n("Logroño");
+i18n("Madrid");
+i18n("Murcia");
+i18n("Pamplona");
+i18n("Valencia");
